@@ -17,10 +17,6 @@
 			<type>war</type>
 		</dependency>
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>com.canoo.webtest</groupId>
 			<artifactId>webtest</artifactId>
 			<version>3.0</version>
@@ -30,6 +26,11 @@
 			<artifactId>groovy-all</artifactId>
 			<version>2.2.2</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.gmaven</groupId>
+			<artifactId>gmaven-plugin</artifactId>
+			<version>1.4</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -58,6 +59,11 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+			</plugin>
 			<!-- skip unit test run, tests to be executed during integration-test -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -73,6 +79,7 @@
 							<goal>test</goal>
 						</goals>
 						<configuration>
+							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-opens java.base/java.security=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED</argLine>
 							<skip>false</skip>
 						</configuration>
 					</execution>
@@ -81,12 +88,20 @@
 			<!-- Use Cargo plugin to start/stop tomcat and deploy examples for integration tests -->
 			<plugin>
 				<groupId>org.codehaus.cargo</groupId>
-				<artifactId>cargo-maven2-plugin</artifactId>
-                <version>1.4.7</version>
+				<artifactId>cargo-maven3-plugin</artifactId>
+                <version>1.10.4</version>
 				<configuration>
+					<container>
+						<containerId>tomcat10x</containerId>
+					</container>
                     <configuration>
                         <properties>
                             <cargo.servlet.port>9999</cargo.servlet.port>
+							<cargo.start.jvmargs>--add-opens=java.base/java.lang=ALL-UNNAMED
+								--add-opens=java.base/java.io=ALL-UNNAMED
+								--add-opens=java.base/java.lang=ALL-UNNAMED
+								--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
+							</cargo.start.jvmargs>
                         </properties>
                     </configuration>
                     <deployables>
